--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -5,5 +5,8 @@
 
 .search {
   width: 100%;
-  background-image: url();
+  padding-bottom: 80px;
+  background-image: url(../../images/search-back.png);
+  background-size: cover;
+  color: white;
 }
