--- a/src/blocks/content-title/_header/content-title_header.css
+++ b/src/blocks/content-title/_header/content-title_header.css
@@ -1,5 +1,5 @@
 .content-title_header {
-  margin-left: 104px;
+  margin-left: 7.5%;
   margin-top: 30px;
   margin-right: 0;
   margin-bottom: 30px;
