--- a/src/blocks/header/__page-links/header__page-links.css
+++ b/src/blocks/header/__page-links/header__page-links.css
@@ -1,6 +1,6 @@
 .header__page-links {
   margin-left: 0;
   margin-top: 30px;
-  margin-right: 104px;
+  margin-right: 7.5%;
   margin-bottom: 30px;
 }
