--- a/src/blocks/search/__button/search__button.css
+++ b/src/blocks/search/__button/search__button.css
@@ -1,9 +1,16 @@
 .search__button {
-  padding: 0;
+  width: 168px;
+  padding-left: auto;
+  padding-top: 21px;
+  padding-right: auto;
+  padding-bottom: 21px;
   background-color: #2F71E5;
   border: none;
   border-radius: 100px;
   font-size: 18px;
   line-height: 24px;
+  cursor: pointer;
   color: white;
+  position: absolute;
+  right: 0;
 }
