--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,3 +4,4 @@
 @import url(../blocks/search/search.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/content-title/content-title.css);
+@import url(../blocks/results/results.css);
