Added news cards, author section and footer

--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -1,4 +1,8 @@
 .card__image {
-    background-image: url();
-    background-size: cover;
+    width: 400px;
+    height: 272px;
+    margin-bottom: 20px;
+    object-fit: cover;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
 }
