--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -1,11 +1,11 @@
 .search__input {
-  width: calc(100% - 168px);
+  width: 580px;
+  height: 64px;
   padding-left: 24px;
-  padding-top: 21px;
-  padding-bottom: 21px;
-  border: 1px solid #D1D2D6;
-  border-top-left-radius: 50px;
-  border-bottom-left-radius: 50px;
+  padding-top: 0;
+  padding-bottom: 0;
+  border: none;
+  border-radius: 100px;
   font-size: 16px;
   line-height: 22px;
 }
