--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,3 +5,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/content-title/content-title.css);
 @import url(../blocks/results/results.css);
+@import url(../blocks/author/author.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/card/card.css);
