--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,3 +9,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/card/card.css);
+@import url(../blocks/menu/menu.css);
