--- a/src/blocks/content-title/_empty/content-title_empty.css
+++ b/src/blocks/content-title/_empty/content-title_empty.css
@@ -1,6 +1,6 @@
 .content-title_empty {
     margin-left: auto;
-    margin-top: 40px;
+    margin-top: 0;
     margin-right: auto;
     margin-bottom: 16px;
     font-size: 26px;
