--- a/src/blocks/results/__loader/results__loader.css
+++ b/src/blocks/results/__loader/results__loader.css
@@ -1,13 +1,21 @@
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 .results__loader {
     width: 74px;
     height: 74px;
     margin-bottom: 24px;
-    border: 1px solid;
+    border: 1px solid #B6BCBF;
     border-radius: 100%;
-    border-color: white;
-    transition: border-color 1s linear 2s;
-}
-
-.results__loader:hover {
-    border-color: black;
+    border-left-color: black;
+    animation-name: rotation;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
