--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -11,3 +11,5 @@
 @import url(../blocks/content-title/content-title.css);
 @import url(../blocks/content-subtitle/content-subtitle.css);
 @import url(../blocks/button/button.css);
+@import url(../blocks/rectangle/rectangle.css);
+@import url(../blocks/loader/loader.css);
