--- a/src/blocks/header/__page/_theme/header__page_theme_light.css
+++ b/src/blocks/header/__page/_theme/header__page_theme_light.css
@@ -1,4 +1,4 @@
 .header__page_theme_light {
-    color: white;
-    border-bottom-color: rgb(255, 255, 255);
+  color: white;
+  border-bottom-color: white;
 }
