--- a/src/blocks/content-title/_details/content-title_details.css
+++ b/src/blocks/content-title/_details/content-title_details.css
@@ -1,4 +1,9 @@
 .content-title_details {
+    width: 85%;
+    margin-left: auto;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 48px;
     font-size: 26px;
     line-height: 30px;
 }
