--- a/src/blocks/details/details.css
+++ b/src/blocks/details/details.css
@@ -1,4 +1,7 @@
 .details {
     width: 100%;
+    padding-top: 80px;
+    padding-bottom: 80px;
     background-color: #F5F6F7;
+    color: #1A1B22;
 }
