--- a/src/blocks/diagram/__row/diagram__row.css
+++ b/src/blocks/diagram/__row/diagram__row.css
@@ -1,5 +1,9 @@
 .diagram__row {
-    margin-top: 0;
-    margin-bottom: 56px;
+    margin-top: 56px;
+    margin-bottom: 0;
     display: flex;
+}
+
+.diagram__row_first {
+    margin-top: 0;
 }
