--- a/src/blocks/diagram/diagram.css
+++ b/src/blocks/diagram/diagram.css
@@ -1,11 +1,17 @@
 @import url(./__bar/diagram__bar.css);
+@import url(./__column-name/diagram__column-name.css);
 @import url(./__columns/diagram__columns.css);
-@import url(./__date/diagram__date.css);
+@import url(./__month/diagram__month.css);
 @import url(./__row/diagram__row.css);
+@import url(./__row-name/diagram__row-name.css);
 @import url(./__scale/diagram__scale.css);
 
 .diagram {
     width: 85%;
     margin-left: auto;
     margin-right: auto;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.4px; 
+    color: #B6BCBF;
 }
