--- a/src/pages/paper.css
+++ b/src/pages/paper.css
@@ -4,6 +4,8 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/summary/summary.css);
 @import url(../blocks/details/details.css);
+@import url(../blocks/footer/footer.css);
 @import url(../blocks/diagram/diagram.css);
 @import url(../blocks/content-title/content-title.css);
+@import url(../blocks/menu/menu.css);
 @import url(../blocks/rectangle/rectangle.css);
