Added About page

--- a/src/blocks/content-subtitle/_search/content-subtitle_search.css
+++ b/src/blocks/content-subtitle/_search/content-subtitle_search.css
@@ -2,3 +2,10 @@
   max-width: 608px;
   margin-bottom: 64px;
 }
+
+@media screen and (max-width: 768px) {
+  .content-subtitle_search {
+    width: 448px;
+    margin-bottom: 24px;
+  }
+}
