--- a/src/blocks/content-title/_card/content-title_card.css
+++ b/src/blocks/content-title/_card/content-title_card.css
@@ -3,3 +3,10 @@
     font-size: 26px;
     line-height: 30px;
 }
+
+@media screen and (max-width: 768px) {
+    .content-title_card {
+        font-size: 22px;
+        line-height: 24px;  
+    }  
+  }
