--- a/src/blocks/search/__form/search__form.css
+++ b/src/blocks/search/__form/search__form.css
@@ -1,8 +1,12 @@
 .search__form {
   width: 608px;
   margin-left: auto;
-  margin-top: 0;
   margin-right: auto;
-  margin-bottom: 0;
   position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .search__form {
+    width: 448px;
+  }  
 }
