--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -8,3 +8,10 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+  .card__description {
+    width: 192px;
+    height: 238px;  
+  }  
+}
