--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -6,3 +6,11 @@
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
 }
+
+@media screen and (max-width: 768px) {
+    .card__image {
+        width: 224px;
+        height: 150px;
+        margin-bottom: 16px;
+    } 
+}
