--- a/src/blocks/commits/__page-link/commits__page-link.css
+++ b/src/blocks/commits/__page-link/commits__page-link.css
@@ -1,4 +1,4 @@
-.results__page-link {
+.commits__page-link {
     margin-left: 0;
     margin-top: 20px;
     margin-right: 0;
@@ -7,11 +7,4 @@
     line-height: 24px;
     text-decoration: none;
     color: #1A1B22;
-}
-
-@media screen and (max-width: 768px) {
-    .results__page-link {
-        margin-top: 8px;
-        margin-bottom: 34px;
-    }
 }
