--- a/src/blocks/content-title/content-title.css
+++ b/src/blocks/content-title/content-title.css
@@ -1,11 +1,14 @@
 @import url(./_author/content-title_author.css);
 @import url(./_card/content-title_card.css);
+@import url(./_commits/content-title_commits.css);
 @import url(./_details/content-title_details.css);
 @import url(./_empty/content-title_empty.css);
+@import url(./_for-customers/content-title_for-customers.css);
 @import url(./_header/content-title_header.css);
 @import url(./_info/content-title_info.css);
 @import url(./_results/content-title_results.css);
 @import url(./_search/content-title_search.css);
+@import url(./_technologies/content-title_technologies.css);
 
 .content-title {
   font-family: 'Roboto Slab';
