--- a/src/blocks/header/__page-links/header__page-links.css
+++ b/src/blocks/header/__page-links/header__page-links.css
@@ -1,4 +1,10 @@
 .header__page-links {
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .header__page-links {
+    margin-top: 22px;
+  }
 }
