--- a/src/blocks/results/__news-cards/results__news-cards.css
+++ b/src/blocks/results/__news-cards/results__news-cards.css
@@ -1,7 +1,20 @@
 .results__news-cards {
+    width: 85%;
+    margin-left: auto;
+    margin-top: 0;
+    margin-right: auto;
     margin-bottom: 64px;
     display: grid;
-    grid-template-columns: repeat(3, 400px);
+    grid-template-columns: repeat(auto-fill, 400px);
     grid-gap: 16px;
     justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+    .results__news-cards {
+        width: 90%;
+        margin-bottom: 22px;
+        grid-template-columns: repeat(auto-fill, 224px);
+        grid-gap: 8px;
+    } 
 }
