--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -1,7 +1,7 @@
 @import url(./__section/root__section.css);
 
 .root {
-  min-width: 100vh;
+  max-width: 1440px;
   font-family: 'Source Sans Pro';
   font-style: normal;
 }
