--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -1,5 +1,5 @@
 .search__input {
-  width: 580px;
+  width: 90%;
   height: 64px;
   padding-left: 24px;
   padding-top: 0;
@@ -8,4 +8,10 @@
   border-radius: 100px;
   font-size: 16px;
   line-height: 22px;
+}
+
+@media screen and (max-width: 768px) {
+  .search__input {
+    height: 56px;
+  }  
 }
