Adapted for 768px

--- a/src/blocks/button/_more/button_more.css
+++ b/src/blocks/button/_more/button_more.css
@@ -6,3 +6,9 @@
   background-color: white;
   border-radius: 80px;
 }
+
+@media screen and (max-width: 768px) {
+  .button_more {
+    width: 240px;
+  }
+}
