--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -2,6 +2,7 @@
 @import url(./__description/card__description.css);
 @import url(./__image/card__image.css);
 @import url(./__news-text/card__news-text.css);
+@import url(./__news-title/card__news-title.css);
 @import url(./__source/card__source.css);
 
 .card {
