--- a/src/blocks/content-title/_author/content-title_author.css
+++ b/src/blocks/content-title/_author/content-title_author.css
@@ -4,3 +4,12 @@
   font-size: 40px;
   line-height: 46px;
 }
+
+@media screen and (max-width: 768px) {
+  .content-title_author {
+    font-size: 30px;
+    line-height: 40px;
+    margin-top: 0;
+    margin-bottom: 16px;
+  }  
+}
