--- a/src/blocks/content-title/_details/content-title_details.css
+++ b/src/blocks/content-title/_details/content-title_details.css
@@ -7,3 +7,9 @@
     font-size: 26px;
     line-height: 30px;
 }
+
+@media screen and (max-width: 768px) {
+    .content-title_details {
+        width: 90%;
+    }
+}
