--- a/src/blocks/author/__photo/author__photo.css
+++ b/src/blocks/author/__photo/author__photo.css
@@ -2,7 +2,20 @@
   width: 464px;
   height: 464px;
   margin-right: 56px;
-  background-image: url(../../../images/author.jpg);
-  background-size: contain;
+  object-fit: cover;
   border-radius: 100%;
+  background-color: #F5F6F7;
+}
+
+@media screen and (max-width: 1440px) {
+  .author__photo {
+    width: calc((464 / 1440) * 100vw);
+    height: calc((464 / 1440) * 100vw);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .author__photo {
+    margin-right: 32px;
+  }
 }
