--- a/src/blocks/author/author.css
+++ b/src/blocks/author/author.css
@@ -11,3 +11,11 @@
   justify-content: start;
   color: #1A1B22;
 }
+
+@media screen and (max-width: 768px) {
+  .author {
+    width: 90%;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
