--- a/src/blocks/content-title/_commits/content-title_commits.css
+++ b/src/blocks/content-title/_commits/content-title_commits.css
@@ -7,3 +7,12 @@
     font-size: 40px;
     line-height: 46px;
 }
+
+@media screen and (max-width: 768px) {
+    .content-title_commits {
+        width: 336px;
+        margin-bottom: 32px;
+        font-size: 30px;
+        line-height: 34px; 
+    }
+}
