--- a/src/blocks/content-title/_for-customers/content-title_for-customers.css
+++ b/src/blocks/content-title/_for-customers/content-title_for-customers.css
@@ -7,3 +7,13 @@
     font-size: 40px;
     line-height: 46px;
 }
+
+@media screen and (max-width: 768px) {
+    .content-title_for-customers {
+        width: 90%;
+        margin-top: 30px;
+        margin-bottom: 16px;
+        font-size: 30px;
+        line-height: 34px;
+    }
+}
