--- a/src/blocks/content-title/_technologies/content-title_technologies.css
+++ b/src/blocks/content-title/_technologies/content-title_technologies.css
@@ -7,3 +7,16 @@
     font-size: 40px;
     line-height: 46px;
 }
+
+@media screen and (max-width: 1320px) {
+    .content-title_technologies {
+        margin-bottom: 40px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .content-title_technologies{
+        font-size: 30px;
+        line-height: 34px;
+    }
+}
