--- a/src/blocks/details/details.css
+++ b/src/blocks/details/details.css
@@ -5,3 +5,10 @@
     background-color: #F5F6F7;
     color: #1A1B22;
 }
+
+@media screen and (max-width: 768px) {
+    .details {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
