--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -12,3 +12,9 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 768px) {
+  .footer {
+    width: 90%;
+  }
+}
