--- a/src/blocks/for-customers/for-customers.css
+++ b/src/blocks/for-customers/for-customers.css
@@ -6,3 +6,9 @@
     padding-bottom: 80px;
     color: #1A1B22;
 }
+
+@media screen and (max-width: 768px) {
+    .for-customers {
+        padding-bottom: 40px;
+    }
+}
