--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,3 +1,4 @@
+@import url(./__link/header__link.css);
 @import url(./__page/header__page.css);
 @import url(./__page-links/header__page-links.css);
 
@@ -7,4 +8,10 @@
   margin-right: auto;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    width: 90%;
+  }
 }
