--- a/src/blocks/menu/__link/menu__link.css
+++ b/src/blocks/menu/__link/menu__link.css
@@ -9,3 +9,9 @@
 .menu__link:last-of-type {
     margin-right: 0;
 }
+
+@media screen and (max-width: 768px) {
+    .menu__link {
+        margin-right: 25px;
+    }
+}
