--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -2,6 +2,8 @@
 
 .root {
   max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: 'Source Sans Pro';
   font-style: normal;
 }
