--- a/src/blocks/summary/__content/summary__content.css
+++ b/src/blocks/summary/__content/summary__content.css
@@ -3,3 +3,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@media screen and (max-width: 768px) {
+    .summary__content {
+        width: 90%;
+    }
+}
