--- a/src/blocks/summary/__path/summary__path.css
+++ b/src/blocks/summary/__path/summary__path.css
@@ -4,3 +4,10 @@
     font-size: 18px;
     line-height: 24px;
 }
+
+@media screen and (max-width: 768px) {
+    .summary__path {
+        margin-top: 32px;
+        margin-bottom: 64px;
+    }
+}
