--- a/src/blocks/summary/summary.css
+++ b/src/blocks/summary/summary.css
@@ -11,3 +11,9 @@
     padding-bottom: 80px;
     color: #1A1B22;
 }
+
+@media screen and (max-width: 768px) {
+    .summary {
+        padding-bottom: 40px;
+    }
+}
