--- a/src/blocks/technologies/__content/technologies__content.css
+++ b/src/blocks/technologies/__content/technologies__content.css
@@ -5,3 +5,9 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 768px) {
+    .technologies__content {
+        width: 90%;
+    }
+}
