--- a/src/blocks/technologies/technologies.css
+++ b/src/blocks/technologies/technologies.css
@@ -11,3 +11,10 @@
     background-color: #F5F6F7;
     color: #1A1B22;
 }
+
+@media screen and (max-width: 768px) {
+    .technologies {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
