--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,9 +1,10 @@
 @import url(./__link/header__link.css);
+@import url(./__logo/header__logo.css);
 @import url(./__page/header__page.css);
 @import url(./__page-links/header__page-links.css);
 
 .header {
-  width: 85%;
+  width: 86%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
