--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,11 +1,13 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
+@import url(../blocks/section-content/section-content.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/search/search.css);
 @import url(../blocks/results/results.css);
 @import url(../blocks/author/author.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/section-header/section-header.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/content-title/content-title.css);
