--- a/src/blocks/section-content/section-content.css
+++ b/src/blocks/section-content/section-content.css
@@ -1,3 +1,6 @@
+@import url(./_author/section-content_author.css);
+@import url(./_tech/section-content_tech.css);
+
 .section-content {
     width: 86%;
     margin-left: auto;
