--- a/src/blocks/content-title/_section-header/content-title_section-header.css
+++ b/src/blocks/content-title/_section-header/content-title_section-header.css
@@ -1,5 +1,4 @@
-.content-title_results {
-    max-width: 712px;
+.content-title_section-header {
     margin-left: 0;
     margin-top: 0;
     margin-right: 0;
@@ -8,11 +7,17 @@
     line-height: 46px;
 }
 
+@media screen and (max-width: 900px) {
+    .content-title_section-header {
+        width: 400px;
+    }
+}
+
 @media screen and (max-width: 768px) {
-    .content-title_results {
+    .content-title_section-header {
         width: 336px;
         margin-bottom: 32px;
         font-size: 30px;
-        line-height: 34px;
+        line-height: 34px; 
     }
 }
