--- a/src/blocks/content-title/_summary/content-title_summary.css
+++ b/src/blocks/content-title/_summary/content-title_summary.css
@@ -1,4 +1,4 @@
-.content-title_info {
+.content-title_summary {
     margin-top: 0;
     margin-bottom: 24px;
     font-size: 40px;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .content-title_info {
+    .content-title_summary {
         font-size: 32px;
         line-height: 34px;
     }
