--- a/src/pages/paper.css
+++ b/src/pages/paper.css
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
+@import url(../blocks/section-content/section-content.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/summary/summary.css);
 @import url(../blocks/details/details.css);
