--- a/src/blocks/results/__news-cards/results__news-cards.css
+++ b/src/blocks/results/__news-cards/results__news-cards.css
@@ -14,3 +14,9 @@
         grid-gap: 8px;
     } 
 }
+
+@media screen and (max-width: 510px) {
+    .results__news-cards {
+        grid-template-columns: 1fr;
+    }
+}
