--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -3,6 +3,7 @@
   height: 64px;
   padding-left: 24px;
   padding-top: 0;
+  padding-right: 0;
   padding-bottom: 0;
   border: none;
   border-radius: 100px;
@@ -14,4 +15,12 @@
   .search__input {
     height: 56px;
   }  
+}
+
+@media screen and (max-width: 425px) {
+  .search__input {
+    width: calc(100% - 16px);
+    padding-left: 16px;
+    margin-bottom: 16px;
+  }
 }
