--- a/src/blocks/author/__photo/author__photo.css
+++ b/src/blocks/author/__photo/author__photo.css
@@ -19,3 +19,13 @@
     margin-right: 32px;
   }
 }
+
+@media screen and (max-width: 592px) {
+  .author__photo {
+    width: 272px;
+    height: 272px;
+    margin-right: 0;
+    margin-bottom: 24px;
+    align-self: center;
+  }
+}
