--- a/src/blocks/button/_search/button_search.css
+++ b/src/blocks/button/_search/button_search.css
@@ -7,3 +7,10 @@
   top: 0;
   right: 0;
 }
+
+@media screen and (max-width: 425px) {
+  .button_search {
+    width: 100%;
+    position: relative;
+  }
+}
