--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -1,7 +1,8 @@
 .card__description {
-  width: 352px;
+  width: 88%;
   height: 260px;
   margin-left: auto;
+  margin-top: 24px;
   margin-right: auto;
   margin-bottom: 24px;
   display: flex;
@@ -11,7 +12,7 @@
 
 @media screen and (max-width: 768px) {
   .card__description {
-    width: 192px;
-    height: 238px;  
+    margin-top: 16px;
+    margin-bottom: 16px;
   }  
 }
