--- a/src/blocks/card/__news-title/card__news-title.css
+++ b/src/blocks/card/__news-title/card__news-title.css
@@ -5,6 +5,8 @@
   font-weight: 400;
   font-size: 26px;
   line-height: 30px;
+  text-decoration: none;
+  color: #1A1B22;
 }
 
 @media screen and (max-width: 768px) {
