--- a/src/blocks/content-title/_section-header/content-title_section-header.css
+++ b/src/blocks/content-title/_section-header/content-title_section-header.css
@@ -1,23 +1,28 @@
 .content-title_section-header {
     margin-left: 0;
     margin-top: 0;
-    margin-right: 0;
+    margin-right: 20px;
     margin-bottom: 64px;
     font-size: 40px;
     line-height: 46px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
     .content-title_section-header {
-        width: 400px;
+        max-width: 400px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .content-title_section-header {
-        width: 336px;
         margin-bottom: 32px;
         font-size: 30px;
         line-height: 34px; 
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .content-title_section-header {
+        margin-bottom: 16px;
     }
 }
