--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,16 +1,25 @@
 .header__logo {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-family: 'Roboto Slab';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-family: 'Roboto Slab';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 @media screen and (max-width: 768px) {
-    .header__logo {
-      margin-top: 22px;
-      margin-bottom: 22px;
-    }
+  .header__logo {
+    margin-top: 22px;
+    margin-bottom: 22px;
   }
+}
+
+@media screen and (max-width: 425px) {
+  .header__logo {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
