--- a/src/blocks/header/__page/header__page.css
+++ b/src/blocks/header/__page/header__page.css
@@ -18,3 +18,15 @@
     padding-bottom: 20px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .header__page {
+    padding-bottom: 14px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .header__page:last-of-type {
+    margin-left: 11px;
+  }
+}
