--- a/src/blocks/diagram/__column-name/diagram__column-name.css
+++ b/src/blocks/diagram/__column-name/diagram__column-name.css
@@ -2,3 +2,9 @@
   min-width: 104px;
   margin: 0;
 }
+
+@media screen and (max-width: 425px) {
+  .diagram__column-name {
+      min-width: 80px;
+  }
+}
