--- a/src/blocks/content-title/_summary/content-title_summary.css
+++ b/src/blocks/content-title/_summary/content-title_summary.css
@@ -7,7 +7,14 @@
 
 @media screen and (max-width: 768px) {
     .content-title_summary {
-        font-size: 32px;
+        font-size: 30px;
         line-height: 34px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .content-title_summary {
+        margin-top: 16px;
+        margin-bottom: 16px;
     }
 }
