--- a/src/blocks/diagram/__month/diagram__month.css
+++ b/src/blocks/diagram/__month/diagram__month.css
@@ -3,3 +3,9 @@
   padding-bottom: 24px;
   border-bottom: 1px solid #1A1B22; 
 }
+
+@media screen and (max-width: 425px) {
+  .diagram__month {
+    padding-bottom: 8px;
+  }
+}
