--- a/src/blocks/diagram/__row-name/diagram__row-name.css
+++ b/src/blocks/diagram/__row-name/diagram__row-name.css
@@ -5,3 +5,9 @@
     line-height: 24px;
     color: #1A1B22;
 }
+
+@media screen and (max-width: 425px) {
+    .diagram__row-name {
+        width: 80px;
+    }
+}
