--- a/src/blocks/diagram/__row/diagram__row.css
+++ b/src/blocks/diagram/__row/diagram__row.css
@@ -7,3 +7,9 @@
 .diagram__row_first {
     margin-top: 0;
 }
+
+@media screen and (max-width: 425px) {
+    .diagram__row {
+        margin-top: 24px;
+    }
+}
