--- a/src/blocks/diagram/__scale/diagram__scale.css
+++ b/src/blocks/diagram/__scale/diagram__scale.css
@@ -3,3 +3,9 @@
     justify-content: space-between;
     margin-left: 104px;
 }
+
+@media screen and (max-width: 425px) {
+    .diagram__scale {
+        display: none;
+    }
+}
