--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,15 +1,18 @@
 @import url(./__copyright/footer__copyright.css);
-@import url(./__link/footer__link.css);
 @import url(./__social/footer__social.css);
 @import url(./__social-icon/footer__social-icon.css);
+@import url(./__social-link/footer__social-link.css);
 
 .footer {
   width: 86%;
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 @media screen and (max-width: 768px) {
