--- a/src/blocks/menu/__link/menu__link.css
+++ b/src/blocks/menu/__link/menu__link.css
@@ -15,3 +15,15 @@
         margin-right: 25px;
     }
 }
+
+@media screen and (max-width: 526px) {
+    .menu__link {
+        margin-right: 0;
+        margin-bottom: 40px;
+        display: block;
+    }
+
+    .menu__link:last-of-type {
+        margin-bottom: 0;
+    }
+}
