--- a/src/blocks/section-content/_tech/section-content_tech.css
+++ b/src/blocks/section-content/_tech/section-content_tech.css
@@ -1,4 +1,9 @@
 .section-content_tech {
     display: flex;
-    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 1303px) {
+    .section-content_tech {
+        flex-direction: column;
+    }
 }
