--- a/src/blocks/technologies/__list/technologies__list.css
+++ b/src/blocks/technologies/__list/technologies__list.css
@@ -3,4 +3,12 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
     grid-gap: 40px;
+    justify-items: center;
+}
+
+@media screen and (max-width: 667px) {
+    .technologies__list {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 30px;
+    }
 }
