--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -1,10 +1,10 @@
 @import url(./_more/button_more.css);
+@import url(./_open-link/button_open-link.css);
 @import url(./_search/button_search.css);
 
 .button {
   height: 64px;
   padding: 0;
-  border: none;
   font-size: 18px;
   line-height: 24px;
   cursor: pointer;
