--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -10,5 +10,7 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/section-header/section-header.css);
 @import url(../blocks/menu/menu.css);
+@import url(../blocks/carousel/flickity.css);
 @import url(../blocks/content-title/content-title.css);
+@import url(../blocks/button/button.css);
 @import url(../blocks/rectangle/rectangle.css);
