--- a/src/pages/paper.css
+++ b/src/pages/paper.css
@@ -9,4 +9,4 @@
 @import url(../blocks/diagram/diagram.css);
 @import url(../blocks/content-title/content-title.css);
 @import url(../blocks/menu/menu.css);
-@import url(../blocks/rectangle/rectangle.css);
+@import url(../blocks/path/path.css);
