--- a/src/blocks/summary/__number-of-news/summary__number-of-news.css
+++ b/src/blocks/summary/__number-of-news/summary__number-of-news.css
@@ -1,4 +1,12 @@
 .summary__number-of-news {
+    margin-top: 0;
+    margin-bottom: 4px;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.summary__number-of-news::after {
+    content: '34 342';
     font-family: 'Roboto';
     font-weight: 700;
 }
