--- a/src/blocks/footer/__social/footer__social.css
+++ b/src/blocks/footer/__social/footer__social.css
@@ -1,3 +1,20 @@
+.footer__social {
+    padding: 0;
+    margin: 0;
+}
+
+.footer__social li {
+    display: inline-block;
+}
+
+.footer__social li:last-of-type {
+    margin-left: 26px;
+}
+
+.footer__social li a {
+    text-decoration: none;
+}
+
 @media screen and (max-width: 650px) {
     .footer__social {
         order: 2;
