--- a/src/blocks/path/path.css
+++ b/src/blocks/path/path.css
@@ -1,23 +1,24 @@
-@import url(./__link/path__link.css);
 @import url(./_summary/path_summary.css);
 
 .path {
-    margin: 0;
     padding: 0;
 }
 
 .path li {
     display: inline-block;
+}
+
+.path li:last-of-type {
     color: #B6BCBF;
 }
 
-.past li::after {
+.path li a {
+    text-decoration: none;
+    color: #1A1B22;
+}
+
+.path li a::after{
     content: '/';
     margin-left: 5px;
-    margin-right: 5px;
     color: #B6BCBF;
 }
-/*
-.past li:first-child::before {
-    content: '';
-}*/
