--- a/src/blocks/results/__news-cards/results__news-cards.css
+++ b/src/blocks/results/__news-cards/results__news-cards.css
@@ -5,6 +5,7 @@
     grid-template-columns: repeat(auto-fill, 400px);
     grid-gap: 16px;
     justify-content: center;
+    display: none;
 }
 
 @media screen and (max-width: 948px) {
