--- a/src/blocks/loader/loader.css
+++ b/src/blocks/loader/loader.css
@@ -18,4 +18,5 @@
     animation-duration: 1s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+    display: none;
 }
