--- a/src/blocks/results/__loading/results__loading.css
+++ b/src/blocks/results/__loading/results__loading.css
@@ -1,6 +1,5 @@
-.results__load {
+.results__loading {
     display: flex;
     flex-direction: column;
     align-items: center;
-    display: none;
 }
