--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -1,8 +1,10 @@
-@import url(./__load/results__load.css);
+@import url(./__loading/results__loading.css);
 @import url(./__news-cards/results__news-cards.css);
 @import url(./__not-found-image/results__not-found-image.css);
+@import url(./__wrapper/results__wrapper.css);
 
 .results {
     background-color: #F5F6F7;
     color: #1A1B22;
+    display: none;
 }
