--- a/src/blocks/results/__news-cards/results__news-cards.css
+++ b/src/blocks/results/__news-cards/results__news-cards.css
@@ -7,7 +7,19 @@
     justify-content: center;
 }
 
-@media screen and (max-width: 948px) {
+@media screen and (max-width: 1280px) {
+    .results__news-cards {
+        grid-template-columns: repeat(auto-fill, 345px);
+    } 
+}
+
+@media screen and (max-width: 1024px) {
+    .results__news-cards {
+        grid-template-columns: repeat(auto-fill, 276px);
+    } 
+}
+
+@media screen and (max-width: 768px) {
     .results__news-cards {
         margin-bottom: 22px;
         grid-template-columns: repeat(auto-fill, 224px);
