--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -1,5 +1,6 @@
 @import url(./__loading/results__loading.css);
 @import url(./__news-cards/results__news-cards.css);
+@import url(./__not-found/results__not-found.css);
 @import url(./__not-found-image/results__not-found-image.css);
 @import url(./__wrapper/results__wrapper.css);
 
