--- a/src/blocks/content-subtitle/_loading/content-subtitle_loading.css
+++ b/src/blocks/content-subtitle/_loading/content-subtitle_loading.css
@@ -1,9 +1,8 @@
-.content-subtitle_load {
+.content-subtitle_loading {
   max-width: 356px;
   margin-bottom: 0;
   font-size: 18px;
   line-height: 24px;
   text-align: center;
   color: #B6BCBF;
-  display: none;
 }
