--- a/src/blocks/content-title/_loading/content-title_loading.css
+++ b/src/blocks/content-title/_loading/content-title_loading.css
@@ -1,4 +1,4 @@
-.content-title_load {
+.content-title_loading {
     margin-left: auto;
     margin-top: 0;
     margin-right: auto;
@@ -6,5 +6,4 @@
     font-size: 26px;
     line-height: 30px;
     text-align: center;
-    display: none;
 }
