--- a/src/blocks/card/__news-title/card__news-title.css
+++ b/src/blocks/card/__news-title/card__news-title.css
@@ -7,6 +7,8 @@
   line-height: 30px;
   text-decoration: none;
   color: #1A1B22;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 948px) {
