--- a/src/blocks/results/__news-cards/results__news-cards.css
+++ b/src/blocks/results/__news-cards/results__news-cards.css
@@ -2,27 +2,14 @@
     margin-top: 0;
     margin-bottom: 64px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 400px);
+    grid-template-columns: repeat(3, 33%);
     grid-gap: 16px;
     justify-content: center;
-}
-
-@media screen and (max-width: 1280px) {
-    .results__news-cards {
-        grid-template-columns: repeat(auto-fill, 345px);
-    } 
-}
-
-@media screen and (max-width: 1024px) {
-    .results__news-cards {
-        grid-template-columns: repeat(auto-fill, 276px);
-    } 
 }
 
 @media screen and (max-width: 768px) {
     .results__news-cards {
         margin-bottom: 22px;
-        grid-template-columns: repeat(auto-fill, 224px);
         grid-gap: 8px;
     } 
 }
