--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -7,6 +7,7 @@
   padding-bottom: 0;
   border: none;
   border-radius: 100px;
+  background-color: white;
   font-size: 16px;
   line-height: 22px;
 }
