--- a/src/pages/analytics.css
+++ b/src/pages/analytics.css
@@ -10,3 +10,4 @@
 @import url(../blocks/content-title/content-title.css);
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/path/path.css);
+@import url(../blocks/text-accent/text-accent.css);
