--- a/src/blocks/card/__news-text/card__news-text.css
+++ b/src/blocks/card/__news-text/card__news-text.css
@@ -1,8 +1,6 @@
 .card__news-text {
-    max-height: 110px;
+    height: 100%;
     margin: 0;
     font-size: 16px;
     line-height: 22px;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
