--- a/src/blocks/card/__news-title/card__news-title.css
+++ b/src/blocks/card/__news-title/card__news-title.css
@@ -1,4 +1,5 @@
 .card__news-title {
+  height: 100%;
   margin: 0;
   font-family: 'Roboto Slab';
   font-style: normal;
@@ -7,8 +8,6 @@
   line-height: 30px;
   text-decoration: none;
   color: #1A1B22;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 948px) {
