--- a/src/blocks/button/_open-link/button_open-link.css
+++ b/src/blocks/button/_open-link/button_open-link.css
@@ -10,6 +10,11 @@
   display: none;
 }
 
+.button_open-link a {
+  color: black;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 425px) {
   .button_open-link {
     display: block;
