--- a/src/blocks/button/_search/button_search.css
+++ b/src/blocks/button/_search/button_search.css
@@ -9,6 +9,14 @@
   right: 0;
 }
 
+.button_search:hover {
+  background-color: #347EFF;
+}
+
+.button_search:active {
+  background-color: #2A65CC;
+}
+
 @media screen and (max-width: 425px) {
   .button_search {
     width: 100%;
