--- a/src/blocks/diagram/__bar/_day/diagram__bar_day_2.css
+++ b/src/blocks/diagram/__bar/_day/diagram__bar_day_2.css
@@ -1,8 +1,8 @@
-.diagram__bar_day_fri {
+.diagram__bar_day_2 {
   width: 10%;
 }
 
-.diagram__bar_day_fri::after {
+.diagram__bar_day_2::after {
   content: '10';
   margin-left: 6px;
 }
