--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -1,8 +1,8 @@
 .card__description {
   width: 88%;
-  height: 260px;
+  min-height: 260px;
   margin-left: auto;
-  margin-top: 24px;
+  margin-top: 20px;
   margin-right: auto;
   margin-bottom: 24px;
   display: flex;
