--- a/src/blocks/commits/__author-name/commits__author-name.css
+++ b/src/blocks/commits/__author-name/commits__author-name.css
@@ -1,6 +1,6 @@
 .commits__author-name {
   margin: 0;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 26px;
