--- a/src/blocks/diagram/__bar/_day/diagram__bar_day_3.css
+++ b/src/blocks/diagram/__bar/_day/diagram__bar_day_3.css
@@ -1,8 +1,8 @@
-.diagram__bar_day_mon {
+.diagram__bar_day_3 {
   width: 10%;
 }
 
-.diagram__bar_day_mon::after {
+.diagram__bar_day_3::after {
   content: '10';
   margin-left: 6px;
 }
