--- a/src/blocks/diagram/__bar/_day/diagram__bar_day_5.css
+++ b/src/blocks/diagram/__bar/_day/diagram__bar_day_5.css
@@ -1,8 +1,8 @@
-.diagram__bar_day_wed {
+.diagram__bar_day_5 {
   width: 10%;
 }
 
-.diagram__bar_day_wed::after {
+.diagram__bar_day_5::after {
   content: '10';
   margin-left: 6px;
 }
