--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -4,6 +4,6 @@
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  font-family: 'Source Sans Pro';
+  font-family: 'Source Sans Pro', Arial, sans-serif;
   font-style: normal;
 }
