--- a/src/blocks/summary/__number-of-news/summary__number-of-news.css
+++ b/src/blocks/summary/__number-of-news/summary__number-of-news.css
@@ -7,6 +7,6 @@
 
 .summary__number-of-news::after {
     content: '34 342';
-    font-family: 'Roboto';
+    font-family: 'Roboto', Arial, sans-serif;
     font-weight: 700;
 }
