--- a/src/blocks/summary/__number-of-references/summary__number-of-references.css
+++ b/src/blocks/summary/__number-of-references/summary__number-of-references.css
@@ -6,6 +6,6 @@
 
 .summary__number-of-references::after {
     content: '235';
-    font-family: 'Roboto';
+    font-family: 'Roboto', Arial, sans-serif;
     font-weight: 700;
 }
