--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -1,6 +1,6 @@
 .card__description {
   width: 88%;
-  height: 260px;
+  min-height: 260px;
   margin-left: auto;
   margin-top: 24px;
   margin-right: auto;
