--- a/src/blocks/card/__source/card__source.css
+++ b/src/blocks/card/__source/card__source.css
@@ -1,6 +1,6 @@
 .card__source {
     margin: 0;
-    font-family: 'Roboto Slab';
+    font-family: 'Roboto Slab', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
