--- a/src/blocks/commits/commits.css
+++ b/src/blocks/commits/commits.css
@@ -10,3 +10,25 @@
     background-color: #F5F6F7;
     color: #1A1B22;
 }
+
+.carousel-cell {
+    width: 352px;
+    height: 240px;
+    padding: 24px;
+    margin-right: 10px;
+    border-radius: 16px;
+    background-color: white;
+}
+  
+@media screen and (max-width: 768px) {
+    .carousel-cell {
+      width: 288px;
+      height: 194px;
+    }
+}
+  
+@media screen and (max-width: 425px) {
+    .carousel-cell {
+      height: 216px;
+    }
+}
