--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -1,3 +1,17 @@
+@keyframes blink {
+  0% {
+    background-color: white;
+  }
+
+  50% {
+    background-color: #edcaca;
+  }
+
+  100% {
+    background-color: white;
+  }
+}
+
 .search__input {
   width: 90%;
   height: 64px;
@@ -10,6 +24,11 @@
   background-color: white;
   font-size: 16px;
   line-height: 22px;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-play-state: paused;
 }
 
 @media screen and (max-width: 768px) {
