--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -3,7 +3,7 @@
 
 .search {
   padding-top: 0;
-  background-image: url(../../images/search-back.jpg);
+  background-image: url(../../images/search-back.png);
   background-size: cover;
   color: white;
 }
