--- a/src/blocks/content-subtitle/content-subtitle.css
+++ b/src/blocks/content-subtitle/content-subtitle.css
@@ -1,3 +1,4 @@
+@import url(./_commits/content-subtitle_commits.css);
 @import url(./_loading/content-subtitle_loading.css);
 @import url(./_search/content-subtitle_search.css);
 
