--- a/src/blocks/content-title/content-title.css
+++ b/src/blocks/content-title/content-title.css
@@ -1,4 +1,5 @@
 @import url(./_author/content-title_author.css);
+@import url(./_commits/content-title_commits.css);
 @import url(./_details/content-title_details.css);
 @import url(./_loading/content-title_loading.css);
 @import url(./_for-customers/content-title_for-customers.css);
