--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -11,4 +11,5 @@
 @import url(../blocks/section-header/section-header.css);
 @import url(../../node_modules/flickity/css/flickity.css);
 @import url(../blocks/content-title/content-title.css);
+@import url(../blocks/content-subtitle/content-subtitle.css);
 @import url(../blocks/button/button.css);
