--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -1,6 +1,7 @@
 @import url(./_more/button_more.css);
 @import url(./_open-link/button_open-link.css);
 @import url(./_search/button_search.css);
+@import url(./_up/button_up.css);
 
 .button {
   height: 64px;
