--- a/src/blocks/diagram/__column-name/diagram__column-name.css
+++ b/src/blocks/diagram/__column-name/diagram__column-name.css
@@ -1,10 +1,12 @@
 .diagram__column-name {
   min-width: 104px;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 24px;
 }
 
 @media screen and (max-width: 425px) {
   .diagram__column-name {
       min-width: 80px;
+      margin-bottom: 8px;
   }
 }
