Исправлены замечания после финального ревью

--- a/src/blocks/author/author.css
+++ b/src/blocks/author/author.css
@@ -1,5 +1,7 @@
+@import url(./__about/author__about.css);
 @import url(./__about-text/author__about-text.css);
 @import url(./__photo/author__photo.css);
+@import url(./__text-paragraph/author__text-paragraph.css);
 
 .author {
   color: #1A1B22;
