--- a/src/blocks/commits/__author-photo/commits__author-photo.css
+++ b/src/blocks/commits/__author-photo/commits__author-photo.css
@@ -5,6 +5,7 @@
   object-fit: cover;
   border-radius: 100%;
   background-color: #F5F6F7;
+  flex-shrink: 0;
 }
 
 @media screen and (max-width: 425px) {
