Исправил некорректное отображение карточек с новостями на устройствах с небольшим разрешением

--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -11,3 +11,15 @@
         height: 196px;
     } 
 }
+
+@media screen and (max-width: 680px) {
+    .card__image {
+        height: 272px;
+    } 
+}
+
+@media screen and (max-width: 425px) {
+    .card__image {
+        height: 196px;
+    } 
+}
