--- a/src/blocks/commits/__about-author/commits__about-author.css
+++ b/src/blocks/commits/__about-author/commits__about-author.css
@@ -3,3 +3,9 @@
   margin-top: 0;
   margin-bottom: 16px;
 }
+
+@media screen and (max-width: 768px) {
+  .commits__about-author {
+    margin-bottom: 8px;
+  }
+}
