--- a/src/blocks/content-title/_commits/content-title_commits.css
+++ b/src/blocks/content-title/_commits/content-title_commits.css
@@ -7,3 +7,10 @@
   line-height: 30px;
   text-align: center;
 }
+
+@media screen and (max-width: 768px) {
+  .content-title_commits {
+    font-size: 22px;
+    line-height: 24px;
+  }
+}
