--- a/src/blocks/card/__date/card__date.css
+++ b/src/blocks/card/__date/card__date.css
@@ -1,5 +1,9 @@
 .card__date {
-    margin: 0;
+    width: 88%;
+    margin-left: auto;
+    margin-top: 20px;
+    margin-right: auto;
+    margin-bottom: 18px;
     font-size: 18px;
     line-height: 24px;
     color: #B6BCBF;
