--- a/src/blocks/commits/__text/commits__text.css
+++ b/src/blocks/commits/__text/commits__text.css
@@ -1,9 +1,8 @@
 .commits__text {
-  max-height: 122px;
   margin: 0;
   font-size: 16px;
   line-height: 22px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 @media screen and (max-width: 768px) {
